--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "minesweeper",
   "version": "0.1.0",
+  "homepage": "https://s1f102100793.github.io/Minesweeper/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
